--- a/packages/frontend/public/play.html
+++ b/packages/frontend/public/play.html
@@ -44,8 +44,8 @@
         data: {
           playType: playUrl.includes('dplayer') ? 'dplayer' : 'artplayer',
           videoUrl: decodeURIComponent(playUrl),
-          dpInstance: null,
-          artInstance: null,
+          dpInc: null,
+          artInc: null,
         },
         play(videoUrl, playType) {
           if (videoUrl && videoUrl !== T.data.videoUrl) T.data.videoUrl = videoUrl;
@@ -81,9 +81,9 @@
           return new Promise(resolve => setTimeout(resolve, ms));
         },
         async dplayer(videoUrl) {
-          if (T.data.dpInstance) {
-            T.data.dpInstance.destroy();
-            T.data.dpInstance = null;
+          if (T.data.dpInc) {
+            T.data.dpInc.destroy();
+            T.data.dpInc = null;
             await T.sleep(100);
           } else {
             await T.loadJS(CDN_CONFIG.dplayer);
@@ -116,15 +116,17 @@
             console.log('[dplayer]播放完毕', videoUrl);
             T.next_video();
           });
-          T.data.dpInstance = dp;
+          T.data.dpInc = dp;
           return dp;
         },
         /** 使用 artplayer 播放 */
         async artplayer(videoUrl) {
-          if (T.data.artInstance) {
-            T.data.artInstance.destroy();
-            T.data.artInstance = null;
-            await T.sleep(100);
+          let art = T.data.artInc;
+
+          if (art) {
+            art.url = videoUrl;
+            art.playbackRate = +art.storage.get('playbackRate') || 1;
+            return art;
           } else {
             await T.loadJS(CDN_CONFIG.artplayer);
           }
@@ -135,7 +137,7 @@
           // 从 videoUrl 提取文件类型
           const type = ['.mp4', '.mkv', '.avi', '.mov', '.wmv', '.flv', '.webm', '.m4v', '.m3u8', '.ogg', '.flv', '.webm'].find(d => videoUrl.includes(d)) || 'm3u8';
 
-          const art = new Artplayer({
+          art = new Artplayer({
             container: document.getElementById('dplayer'),
             url: videoUrl, // 'https://playertest.longtailvideo.com/adaptive/elephants_dream_v4/index.m3u8',
             // airplay: true, // 是否显示AirPlay功能。效果并不好
@@ -206,8 +208,8 @@
               },
             }],
             contextmenu: [
-              { html: '在线播放器', click: () => window.open('https://m3u8-player.lzw.me', '_blank') },
-              { html: '在线下载器', click: () => window.open('https://m3u8-downloader.lzw.me', '_blank') },
+              // { index: 80, html: 'M3U8在线播放器', click: () => window.open(`https://m3u8-player.lzw.me`, '_blank') },
+              { index: 99, html: 'M3U8在线下载器', click: () => window.open(`https://m3u8-downloader.lzw.me`, '_blank') },
             ],
           });
 
@@ -221,10 +223,11 @@
           });
           art.on('ready', () => {
             art.playbackRate = +art.storage.get('playbackRate') || 1;
+            art.contextmenu.remove('version');
           });
 
           // console.log('[artplayer]播放器初始化完成', art);
-          T.data.artInstance = art;
+          T.data.artInc = art;
           return art;
         },
         previous_video() {
@@ -245,9 +248,9 @@
             // 监听来自父窗口的消息
             window.addEventListener('message', (event) => {
               const data = event.data;
-              if (!data) return;
+              if (!data || typeof data !== 'object') return;
 
-              if (typeof data === 'object' && data.url) {
+              if (data.url) {
                 T.data.videoUrl = data.url;
                 if (data.playType) T.data.playType = data.playType;
                 T.play();
