fix(m3u8-capture): refactor iframe mode checks to use boolean value; improve header handling in UI components

--- a/packages/frontend/public/play.html
+++ b/packages/frontend/public/play.html
@@ -120,7 +120,8 @@
         async artplayer(videoUrl) {
           let art = T.data.artInc;
           // 从 videoUrl 提取文件类型
-          const type = ['.mp4', '.mkv', '.avi', '.mov', '.wmv', '.flv', '.webm', '.m4v', '.m3u8', '.ogg', '.flv', '.webm'].find(d => videoUrl.includes(d)) || 'm3u8';
+          let type = ['.mp4', '.mkv', '.avi', '.mov', '.wmv', '.flv', '.webm', '.m4v', '.m3u8', '.ogg', '.flv', '.webm'].find(d => videoUrl.includes(d)) || 'm3u8';
+          if (type.startsWith('.')) type = type.slice(1);
 
           if (art) {
             art.url = videoUrl;
